# Fairness_Information_Criterion-FIC-

./: LICENSE  README.md  USERS_GUIDE.md  projectscriptREVIEW.ipynb  simulation_results.csv
Adult_FIC_ANALYSIS_UPDATED/: ADULT_Group_Metrics.csv
Adult_FIC_ANALYSIS_UPDATED/Excel_results/: ADULT_FIC_Complete_Results.xlsx
Compas_FIC_ANALYSIS_UPDATED/: COMPAS_Group_Metrics.csv
Compas_FIC_ANALYSIS_UPDATED/Excel_results/: COMPAS_FIC_Complete_Results.xlsx
FHIBE_FIC_ACTUAL_RESULTS/: FHIBE_FaceVerification_Actual_Metrics.csv  FHIBE_PoseEstimation_Actual_Metrics.csv
FHIBE_FIC_ACTUAL_RESULTS/Excel_results/: FHIBE_FIC_Complete_Results.xlsx
docs/: LICENSE  README.md  pyproject.toml
fairfic/: pyproject.toml  test_comprehensive.py  test_metrics_fix.py  test_new_features.py
fairfic/examples/: basic_usage.py  users_friendly_examples.py
fairfic/fairfic/: __init__.py  core.py  evaluation.py  metrics.py.backup  visualization.py
fairfic/fairfic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fairfic/fairfic/data/: __init__.py  compas.py
fairfic/test/: test_core.py
